--- a/client/src/index.html
+++ b/client/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="https://bootswatch.com/4/sketchy/bootstrap.css" media="screen">
+  <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.css" media="screen">
   <link rel="stylesheet" href="https://bootswatch.com/_assets/css/custom.min.css">
   <title>Taller</title>
   <base href="/">
@@ -11,6 +11,19 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <a class="navbar-brand" href="#">TALLER</a>
+    <div class="collapse navbar-collapse" id="navbarColor01">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="/lista">LISTA <span class="sr-only">(current)</span></a>
+      </li>
+      <li>
+        <a class="nav-link" href="/nueva">NUEVA</a>
+      </li>
+    </ul>
+    </div>
+  </nav>
   <app-root></app-root>
 </body>
 </html>
