--- a/client/src/index.html
+++ b/client/src/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="https://bootswatch.com/4/sketchy/bootstrap.css" media="screen">
+  <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.css" media="screen">
   <link rel="stylesheet" href="https://bootswatch.com/_assets/css/custom.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" crossorigin="anonymous"></script>
   <title>Taller</title>
   <base href="/">
 
@@ -11,6 +12,26 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <a class="navbar-brand" href="#">TALLER</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarColor01">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="/lista">LISTA <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/nueva">NUEVA</a>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+
+      </form>
+    </div>
+  </nav>
   <app-root></app-root>
 </body>
 </html>
